# jack-keyboard

./: AUTHORS  CMakeLists.txt  COPYING  Makefile  Makefile.am  NEWS  README  TODO  configure.ac
applications/: jack-keyboard.desktop
cmake/: FindJACK.cmake  FindLASH.cmake
debian/: README.source  changelog  control  control.in  copyright  files  rules  watch
man/: Makefile.am  jack-keyboard-ref.sgml  jack-keyboard.1
pixmaps/: Makefile.am
src/: Makefile.am  jack-keyboard.c  jack-keyboard.desktop  pianokeyboard.c  pianokeyboard.h
